--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.19.0",
+    "express": "^4.19.2",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
